# yapper

./: .gitignore  AGENTS.md  Cargo.toml  PROGRESS.md  README.md  Yapper.sln  go.mod  go.sum  main.go
Yapper.CLI/: Program.cs  Yapper.CLI.csproj
Yapper.CLI/Commands/: NoteCommand.cs  TaskCommands.cs
Yapper.CLI/Database/: YapperContext.cs
Yapper.CLI/Models/: Note.cs  Task.cs
cmd/: yapper.go
cmd/note-daemon/: main.go
crates/note-core/: Cargo.toml
crates/note-core/src/: domain.rs  index.rs  lib.rs  model.rs  (+2 more)
crates/note-daemon/: Cargo.toml
internal/cli/: note_cmd.go  task_cmd.go
internal/config/: config.go
internal/core/: domain.go  index.go  model.go  parser.go  vault.go
internal/db/: db.go
internal/domain/: doc.go
internal/index/: doc.go  index.go  inmemory.go  inmemory_test.go  manager.go  manager_test.go
internal/logger/: logger.go
internal/logging/: logging.go
internal/model/: models.go  note.go  task.go
internal/parser/: doc.go  parser.go  regex_parser.go  regex_parser_test.go
internal/render/: note_form.go  render.go  task_form.go
internal/rpc/: doc.go  rpc.go
internal/server/: server.go
internal/vault/: doc.go  filesystem_vault.go  vault.go  vault_test.go
logger/: logger.go
model/: block.go  block_utils.go  page.go  page_tree.go
pages/: daily_page.go  find_page.go
src/: main.rs  model.rs  tea.rs
yap-core/: Cargo.toml
yap-core/src/: block.rs  block_tree.rs  lib.rs  page.rs
yap-gui/: Cargo.toml
yap-tui/: Cargo.toml
yap-tui/src/: main.rs  message.rs  model.rs  page.rs  state.rs  util.rs
yapper/: Cargo.toml
(+6 files in other folders)
