[package]
name = "yap-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tui-tree-widget = "0.23.0"
uuid = { version = "1.16.0", features = ["v4"] }
yap-core = { path = "../yap-core" }
tree-ds = "0.1.6"
tracing-error = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
directories = "6.0.0"
lazy_static = "1.5.0"
color-eyre = "0.6.4"
